# tf2-terminal

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
plugin-sdk/: Cargo.toml
plugin-sdk/src/: abi.rs  host.rs  lib.rs
sample-plugin/: Cargo.toml  plugin.toml
sample-plugin/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  error.rs  lib.rs  main.rs  telemetry.rs
src-tauri/src/commands/: alerts.rs  auth.rs  export.rs  flip_finder.rs  inventory.rs  market.rs  mod.rs  organization.rs  plugins.rs  portfolio.rs  schema.rs  search.rs  settings.rs  simulator.rs  trade_history.rs  trades.rs
src-tauri/src/domain/: alerts.rs  classified_url.rs  currency.rs  flip_finder.rs  item.rs  liquidity.rs  mod.rs  plugin.rs  portfolio.rs  pricing.rs  steam_id.rs  trade_rating.rs  trend.rs
src-tauri/src/infra/: config.rs  keychain.rs  mod.rs
src-tauri/src/infra/backpack_tf/: client.rs  mod.rs  models.rs  websocket.rs
src-tauri/src/infra/db/: mod.rs
src-tauri/src/infra/db/migrations/: 0001_init.sql  0002_items.sql  0003_inventory.sql  0004_organization.sql  0005_market_listings.sql  0006_price_history.sql  0007_market_listings_full_key.sql  0008_alerts.sql  0009_watchlist.sql  0010_portfolio.sql  0011_plugins.sql  0012_item_images.sql
src-tauri/src/infra/db/repos/: alerts_repo.rs  alerts_repo_tests.rs  inventory_repo.rs  inventory_repo_tests.rs  item_meta_repo.rs  item_meta_repo_tests.rs  items_repo.rs  kv_cache_repo.rs  market_listings_repo.rs  market_listings_repo_tests.rs  mod.rs  plugins_repo.rs  plugins_repo_tests.rs  portfolio_repo.rs  portfolio_repo_tests.rs  price_history_repo.rs  price_history_repo_tests.rs  tags_repo.rs  trades_repo.rs  (+4 more)
src-tauri/src/infra/export/: csv.rs  csv_tests.rs  mod.rs  pdf.rs  pdf_tests.rs  xlsx.rs  xlsx_tests.rs
src-tauri/src/infra/notify/: discord.rs  mod.rs  os.rs
src-tauri/src/infra/plugins/: host_functions.rs  host_functions_tests.rs  mod.rs  runtime.rs  runtime_tests.rs
src-tauri/src/infra/steam/: auth.rs  inventory.rs  mod.rs  schema.rs  trade_offers.rs  trade_send.rs
src-tauri/src/services/: alert_service.rs  alert_service_tests.rs  backpack_service.rs  export_service.rs  export_service_tests.rs  flip_finder.rs  flip_finder_tests.rs  history_recorder.rs  history_recorder_tests.rs  inventory_service.rs  item_valuation.rs  item_valuation_tests.rs  live_feed.rs  market_analyzer_service.rs  market_analyzer_service_tests.rs  market_data_service.rs  mod.rs  partner_inventory_service.rs  partner_inventory_service_tests.rs  plugin_service.rs  plugin_service_tests.rs  portfolio_service.rs  portfolio_service_tests.rs  schema_service.rs  simulator_service.rs  simulator_service_tests.rs  trade_analysis_engine.rs  trade_analysis_engine_tests.rs  trade_history_service.rs  trade_history_service_tests.rs
src-tauri/tests/fixtures/sample_plugin/: sample_plugin.wasm
(+58 files in other folders)
