[package]
name = "sample-plugin"
version = "0.1.0"
edition = "2021"
description = "Example TF2 Terminal plugin — relays alerts through the Discord notification sink"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
tf2-terminal-plugin-sdk = { path = "../plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
