[package]
name = "tf2-terminal"
version = "0.1.0"
description = "A desktop trading terminal for Team Fortress 2"
authors = ["bndit"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tf2_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "time"] }
tokio-tungstenite = { version = "0.30.0", features = ["rustls-tls-webpki-roots"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.5"
governor = "0.10.4"
thiserror = "2.0.18"
toml = "1.1.2"
dirs = "6.0.0"
anyhow = "1.0.103"
reqwest = { version = "0.13.4", features = ["form", "json", "query"] }
keyring = { version = "4.1.4", features = ["apple-native-keyring-store", "linux-keyutils-keyring-store"] }
specta = { version = "2.0.0-rc.25", features = ["derive"] }
specta-typescript = "0.0.12"
tauri-specta = { version = "2.0.0-rc.25", features = ["derive", "typescript"] }
tiny_http = "0.12.0"
open = "5.4.0"
url = "2.5.8"
futures-util = "0.3.32"
tauri-plugin-notification = "2.3.3"

